--- a/tdd_jest/package.json
+++ b/tdd_jest/package.json
@@ -4,7 +4,7 @@
 	"description": "Aprendendo TDD com JEST",
 	"main": "app.js",
 	"scripts": {
-		"test": "jest --watch"
+		"test": "jest --watchAll"
 	},
 	"repository": {
 		"type": "git",
